# general-rag-chat

./: .dockerignore  .env.example  .env.portainer.example  .env.production.example  .env.testing  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  USER_STORIES.md  composer.json  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  phpunit.xml  rector.php
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260201_1528_a1510f6b6118_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  chat.py  conversations.py  deps.py  recaps.py  sources.py
backend/app/models/: __init__.py  conversation.py  document.py  recap.py  settings.py  source.py  user.py
backend/app/services/: __init__.py  chat.py  date_filter.py  email.py  email_templates.py  embeddings.py  encryption.py  llm.py  model_registry.py  query_enrichment.py  recap.py  security.py  vector_store.py
backend/app/services/ingestion/: __init__.py  base.py  content_extractor.py  document.py  rss.py  website.py
backend/app/tasks/: __init__.py  cache.py  email.py  ingestion.py  recap.py
backend/migrations/: 001_add_context_expansion_settings.sql  002_add_email_notifications.sql
bootstrap/: app.php
config/: auth.php  chat.php  ciphersweet.php  prompts.php  services.php
docs/: setup.md
frontend/: Dockerfile  Dockerfile.prod  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
(+169 files in other folders)
