[project]
name = "rag-backend"
version = "0.1.0"
description = "General Purpose RAG System Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Validation
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Task queue
    "celery>=5.3.6",
    "redis>=5.0.1",

    # Vector database
    "qdrant-client>=1.7.0",

    # LLM and embeddings
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.3.1",
    "tiktoken>=0.5.2",

    # Document processing
    "unstructured>=0.12.0",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.10",
    "httpx>=0.26.0",
    "lxml>=5.1.0",
    "python-magic>=0.4.27",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
